; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/uIP/extr_uip_tcp.c_uip_tcp_pcbpurge.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/uIP/extr_uip_tcp.c_uip_tcp_pcbpurge.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uip_tcp_pcb = type { i64, i32*, i32*, i32* }

@UIP_CLOSED = common dso_local global i64 0, align 8
@UIP_TIME_WAIT = common dso_local global i64 0, align 8
@UIP_LISTEN = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @uip_tcp_pcbpurge(%struct.uip_tcp_pcb* %0) #0 {
  %2 = alloca %struct.uip_tcp_pcb*, align 8
  store %struct.uip_tcp_pcb* %0, %struct.uip_tcp_pcb** %2, align 8
  %3 = load %struct.uip_tcp_pcb*, %struct.uip_tcp_pcb** %2, align 8
  %4 = getelementptr inbounds %struct.uip_tcp_pcb, %struct.uip_tcp_pcb* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @UIP_CLOSED, align 8
  %7 = icmp ne i64 %5, %6
  br i1 %7, label %8, label %39

8:                                                ; preds = %1
  %9 = load %struct.uip_tcp_pcb*, %struct.uip_tcp_pcb** %2, align 8
  %10 = getelementptr inbounds %struct.uip_tcp_pcb, %struct.uip_tcp_pcb* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @UIP_TIME_WAIT, align 8
  %13 = icmp ne i64 %11, %12
  br i1 %13, label %14, label %39

14:                                               ; preds = %8
  %15 = load %struct.uip_tcp_pcb*, %struct.uip_tcp_pcb** %2, align 8
  %16 = getelementptr inbounds %struct.uip_tcp_pcb, %struct.uip_tcp_pcb* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @UIP_LISTEN, align 8
  %19 = icmp ne i64 %17, %18
  br i1 %19, label %20, label %39

20:                                               ; preds = %14
  %21 = load %struct.uip_tcp_pcb*, %struct.uip_tcp_pcb** %2, align 8
  %22 = getelementptr inbounds %struct.uip_tcp_pcb, %struct.uip_tcp_pcb* %21, i32 0, i32 1
  %23 = load i32*, i32** %22, align 8
  %24 = call i32 @uip_tcpsegs_free(i32* %23)
  %25 = load %struct.uip_tcp_pcb*, %struct.uip_tcp_pcb** %2, align 8
  %26 = getelementptr inbounds %struct.uip_tcp_pcb, %struct.uip_tcp_pcb* %25, i32 0, i32 3
  %27 = load i32*, i32** %26, align 8
  %28 = call i32 @uip_tcpsegs_free(i32* %27)
  %29 = load %struct.uip_tcp_pcb*, %struct.uip_tcp_pcb** %2, align 8
  %30 = getelementptr inbounds %struct.uip_tcp_pcb, %struct.uip_tcp_pcb* %29, i32 0, i32 2
  %31 = load i32*, i32** %30, align 8
  %32 = call i32 @uip_tcpsegs_free(i32* %31)
  %33 = load %struct.uip_tcp_pcb*, %struct.uip_tcp_pcb** %2, align 8
  %34 = getelementptr inbounds %struct.uip_tcp_pcb, %struct.uip_tcp_pcb* %33, i32 0, i32 1
  store i32* null, i32** %34, align 8
  %35 = load %struct.uip_tcp_pcb*, %struct.uip_tcp_pcb** %2, align 8
  %36 = getelementptr inbounds %struct.uip_tcp_pcb, %struct.uip_tcp_pcb* %35, i32 0, i32 2
  store i32* null, i32** %36, align 8
  %37 = load %struct.uip_tcp_pcb*, %struct.uip_tcp_pcb** %2, align 8
  %38 = getelementptr inbounds %struct.uip_tcp_pcb, %struct.uip_tcp_pcb* %37, i32 0, i32 3
  store i32* null, i32** %38, align 8
  br label %39

39:                                               ; preds = %20, %14, %8, %1
  ret void
}

declare dso_local i32 @uip_tcpsegs_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
